// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`cardReducer cardReducer appends a new card to state on action ADD_CARD 1`] = `
Object {
  "40d14391c": Object {
    "created": "2019-11-19T19:22:47.572-08:00",
    "id": "40d14391c",
    "left": 0,
    "metafile": "29334943",
    "modified": "2019-11-19T19:22:47.572-08:00",
    "name": "card1",
    "top": 0,
    "type": "Editor",
  },
  "t829w0351": Object {
    "created": "2014-04-09T08:14:02.371-08:00",
    "id": "t829w0351",
    "left": 100,
    "metafile": "84354571",
    "modified": "2014-06-23T21:58:44.507-08:00",
    "name": "card2",
    "top": 50,
    "type": "Editor",
  },
}
`;

exports[`cardReducer cardReducer updates state of matched card on action UPDATE_CARD 1`] = `
Object {
  "40d14391c": Object {
    "created": "2019-11-19T19:22:47.572-08:00",
    "id": "40d14391c",
    "left": 178,
    "metafile": "29334943",
    "modified": "2019-11-22T12:54:11.374-08:00",
    "name": "card1",
    "top": 540,
    "type": "Editor",
  },
}
`;
